style.scss
---
---

$site-red: #e03f3f;
$site-white: #ffffff;

.flex-container {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  gap: 10px;
  > div {
    border-bottom: 5px solid;
    border-color: $site-red;
    margin-top: 10px;
  }
}

* {
  font-family: Arial, Helvetica, sans-serif;
  // margin: 0px;
}

img {
  display: block;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
}

@media only screen and (max-device-width: 1000px) {
  h1 {
    font-size: 4rem;
  }

  p,
  a,
  h2,
  h3 {
    font-size: 3rem;
  }

  .flex-container {
    grid-template-columns: 1fr;
    grid-auto-rows: auto;

  }
  body main {
    width: 95%;
  }
}

#post-list {
  list-style: none;
  padding-left: 0;
  margin: 0;
  h2,
  h3 {
    margin-top: 0.25rem;
    margin-bottom: 0;
  }
  // makes the date wrap first
  div {
    display: flex;
    align-items: flex-end;
    flex-flow: row wrap;
    gap: 0.5rem;
  }
  p {
    margin-top: 0;
  }
}

main {
  margin: auto;
  width: 95%;
  h1 {
    margin-bottom: 0.25rem;
    color: $site-red;
  }

  
}

nav {
  background-color: $site-red;

  a {
    margin: 5px 10px 5px 10px;
    display: inline-block;
    text-decoration: none;
    color: $site-white;
    font-size: 2em;
  }
}

.columns-list {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}

